fixed cursor css in demo example

--- a/example/example.css
+++ b/example/example.css
@@ -143,18 +143,18 @@ button:hover {
   padding: 10px;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 0.4s ease-in-out;
+}
+.container div {
   cursor: move;
   cursor: grab;
   cursor: -moz-grab;
   cursor: -webkit-grab;
-}
-.container div {
   margin-bottom: 10px;
 }
 .container div:last-child {
   margin-bottom: 0;
 }
-.gu-unselectable {
+.gu-mirror {
   cursor: grabbing;
   cursor: -moz-grabbing;
   cursor: -webkit-grabbing;
